--- a/jsonbuilder/css/style.css
+++ b/jsonbuilder/css/style.css
@@ -17,7 +17,7 @@
     outline: none;
 }
 .json_init {
-    font-size: 10px;
+    font-size: 11px;
     padding: 2px;
     cursor: pointer;
     position: relative;
@@ -43,7 +43,7 @@
 }
 .json_editor {
     padding: 15px;
-    margin: 0 15px;
+    margin: 15px;
     border: 1px solid #ddd;
     background: #eee;
     border-radius: 2px;
@@ -94,10 +94,15 @@
 }
 .objtxt {
     border: 1px solid #ddd;
-    width: 100px;
-    height: 18px;
+    min-width: 10px;
     border-radius: 2px;
+    vertical-align: middle;
     padding: 2px;
+    font-size: 11px;
+}
+.objtxt[contenteditable]{
+    background-color: #fff;
+    display: inline-block;
 }
 .val.obj:after {
     content: "";
