--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /*@import url(https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic);*/
-@import url(https://fonts.googleapis.com/css?family=Inconsolata:400);
+/*@import url(https://fonts.googleapis.com/css?family=Inconsolata:400);*/
+@font-face{
+    font-family:'console';
+    font-weight: 400;
+    src : url("../fonts/Consolas.ttf") format("truetype");
+}
 *{
 	margin: 0;
 	padding: 0;
@@ -12,7 +17,7 @@
 	-khtml-box-sizing:border-box;
 	list-style:none;
 	text-decoration:none;
-    font-family: 'Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'console','Inconsolata',"Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
     outline: none;
 }
@@ -80,6 +85,7 @@
 }
 .key_row {
     margin: 6px 0;
+    position: relative;
 }
 .key {
     float: left;
@@ -202,9 +208,39 @@
 	color:#C41A16;
 	/*text-shadow: 0 0 0px #000;*/
 }
+.objval.str:before,.objval.str:after{
+    content:"'"
+}
+.objval.num{
+    color:#1C00CF;
+}
+.objval.str{
+    color:#C41A16;
+}
 .objval[contenteditable]{
     display: inline-block;
     position: relative;
     z-index: 1;
 }
 .val.nonobj > .json_block{display: inline;}
+.remove {
+    position: absolute;
+    background: url('../images/remove.png');
+    padding: 6px;
+    background-size: 50%;
+    z-index: 2;
+    left: -14px;
+    top: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 50%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+.add_obj,.remove{
+    opacity:.4;
+}
+.add_obj:hover,.remove:hover{
+    opacity:1;
+}
