--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,65 @@ html,body{
 .hide{
     display: none;
 }
+keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
+@-webkit-keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
+@-moz-keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
+@-ms-keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
+@-o-keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
+@-khtml-keyframes process{
+    0%{background-position: 0 0;}
+    100%{background-position: -34px 0;}
+}
 .json_init {
     font-size: 11px;
     padding: 2px;
     cursor: pointer;
     position: relative;
     display: inline-block;
-    border: 1px solid #ddd;
-    background: #fff;
+    border: 1px solid #B6B6B6;
+    background-image: linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    background-image: -webkit-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    background-image: -moz-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    background-image: -o-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    background-image: -ms-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    background-image: -khtml-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);
+    border-radius: 2px;
+    background-size: 100% 20px;
+    color: #000;
+    text-shadow: 0px 1px 0px #fff;
+    text-align: center;
+    width: 35px;
+    vertical-align: top;
+    transition : all 1s ease;
+    -webkit-transition : all 1s ease;
+    -moz-transition : all 1s ease;
+    -o-transition : all 1s ease;
+    -ms-transition : all 1s ease;
+    animation: process 1s infinite linear;
+}
+.json_init:focus:before {
+    content: "";
+    border: 1px solid #4D90FE;
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    width: 33px;
+    height: 17px;
     border-radius: 2px;
 }
 .json_op {
@@ -76,7 +127,6 @@ html,body{
 
 .json_editor {
     padding: 15px;
-    margin: 15px 0;
     border: 1px solid #ddd;
     background: #eee;
     border-radius: 2px;
@@ -104,9 +154,15 @@ html,body{
 }
 .key_holder {
     padding: 0 0 0 18px;
+    border: 1px solid #EEEEEE;
 }
 .key_holder.to_add {
-    background-color:#F7F7F7;
+    background-color: #F7F7F7;
+    border: 1px dashed #CCCCCC;
+    border-radius: 2px;
+}
+.key_holder.to_add .key_holder{
+    border-color:#F7F7F7;
 }
 .key_row {
     margin: 6px 0;
@@ -140,6 +196,7 @@ html,body{
 	color:#881391;
     line-height: 14px;
     height: 20px;
+    vertical-align: top;
 	/*text-shadow: 0 0 0px #000;*/
 }
 .objtxt[contenteditable]{
@@ -173,12 +230,27 @@ html,body{
     display: inline-block;
     border-right: 1px solid #ddd;
     color: #4C4C4C;
+    text-shadow: 0 0;
+    background-color: #fff;
+}
+.json_op >.op:first-child:hover:before,.json_op >.op:first-child:focus:before{
+    border-color: transparent #E8E8E8;
+}
+.json_op >.op:first-child:before {
+    content:"";
+    border-width: 5px;
+    border-color: transparent #ddd;
+    border-left: 0;
+    border-style: solid;
+    right: 100%;
+    position: absolute;
+    top: 6px;
 }
 
-.json_op:after,.json_op:before {
+.json_op:after{
     content: "";
     position: absolute;
-    top: 5px;
+    top: 6px;
     border-width: 5px;
     border-style: solid;
 }
@@ -193,12 +265,14 @@ html,body{
     border-color: transparent #fff;
     border-left: 0;
     right: 100%;
-    margin-right: -1px;
+    margin-right: 0;
 }
 .json_op > .op:last-child {
     border-right: 0;
 }
-
+.json_op > .op:hover,.json_op > .op:focus {
+    background-color: #E8E8E8;
+}
 .json_op > .op:hover {
     color: #000;
 }
@@ -258,11 +332,12 @@ html,body{
     height: 12px;
     background-size: 100%;
     z-index: 2;
-    left: -15px;
+    left: -14px;
     top: 5px;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .add_obj,.remove{
@@ -308,9 +383,10 @@ pre.result {
 }
 #jsonEditor {
     position: relative;
+    margin: 15px 0 8px 0;
 }
 
-.stringify {
+/*.stringify {
     position: absolute;
     right: 1px;
     top: 1px;
@@ -323,7 +399,7 @@ pre.result {
     cursor: pointer;
     z-index: 1;
     box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.09);
-}
+}*/
 .main-title {
     margin-top: 12px;
 }
@@ -336,3 +412,63 @@ pre.result {
 .em {
     float: right;
 }
+/*.log{
+    position: absolute;
+    right: 1px;
+    bottom: 1px;
+    border: 1px solid #B7B7B7;
+    border-width: 1px 0 0 1px;
+    border-radius: 12px 0 0 0;
+    padding: 5px;
+    font-size: 12px;
+    background-color: #fff;
+    cursor: pointer;
+    z-index: 1;
+    box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.09);
+}
+.stringify:active{
+    box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.21);
+}
+.log:active {
+    box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.21);
+}*/
+.line {
+    position: absolute;
+    width: 0px;
+    left: -8px;
+    top: 0;
+    height: 100%;
+    border-left: 1px dotted #000;
+}
+.line:before {
+    content: "";
+    left: -1px;
+    top: 0;
+    position: absolute;
+    width: 6px;
+    height: 10px;
+    border-bottom: 1px dotted #000;
+    background-color: #EEEEEE;
+}
+.line:after {
+    content: "";
+    left: -1px;
+    bottom: 0;
+    position: absolute;
+    width: 6px;
+    height: 8px;
+    border-top: 1px dotted #000;
+    background-color: #EEEEEE;
+}
+.cmd {
+    border: 1px solid #B7B7B7;
+    border-radius: 2px;
+    padding: 5px;
+    font-size: 12px;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.cmd:active,.cmd:focus{
+    background-color: #EEEEEE;
+};
