--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,35 @@ html,body{
     font-weight: 400;
     outline: none;
 }
+a.logo {
+    background: url('../images/logo.png');
+    width: 50px;
+    height: 45px;
+    display: inline-block;
+    vertical-align: middle;
+    background-size: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.container.top-header{
+    margin-bottom: 16px;
+}
+.top-header {
+    padding: 10px 6px;
+    background-color: #EEEEEE;
+    border: 1px solid #ddd;
+    border-top: 0;
+    border-radius: 0 0 2px 2px;
+}
+
+.lgsl {
+    position: absolute;
+    left: 50%;
+    top: 3px;
+    width: 250px;
+    text-align: center;
+    margin-left: -125px;
+}
 .container {
     width: 600px;
     margin: 0 auto;
@@ -164,12 +193,16 @@ keyframes process{
 .key_holder.to_add .key_holder{
     border-color:#F7F7F7;
 }
+.key_holder.to_add .key_holder .line:before,.key_holder.to_add .key_holder .line:after{
+    background-color: #F7F7F7;
+}
 .key_row {
     margin: 6px 0;
     position: relative;
 }
 .key {
     float: left;
+    position: relative;
 }
 .key:after {
     content: ":";
@@ -190,11 +223,11 @@ keyframes process{
     min-width: 10px;
     border-radius: 2px;
     vertical-align: middle;
-    padding: 2px;
+    padding: 0 2px;
     font-size: 12px;
     background: #fff;
 	color:#881391;
-    line-height: 14px;
+    line-height: 18px;
     height: 20px;
     vertical-align: top;
 	/*text-shadow: 0 0 0px #000;*/
@@ -232,6 +265,8 @@ keyframes process{
     color: #4C4C4C;
     text-shadow: 0 0;
     background-color: #fff;
+    height: 23px;
+    line-height: 10px;
 }
 .json_op >.op:first-child:hover:before,.json_op >.op:first-child:focus:before{
     border-color: transparent #E8E8E8;
@@ -293,21 +328,24 @@ keyframes process{
 }
 .objtxt:active,.objtxt:focus {
     background: #fff;
+    border: 1px solid #4D90FE;
 }
 .objval:active,.objval:focus {
     background: #fff;
+    border: 1px solid #4D90FE;
 }
 .objval {
     border: 1px solid #ddd;
     min-width: 10px;
     border-radius: 2px;
     vertical-align: middle;
-    padding: 2px;
+    padding: 0 2px;
     font-size: 12px;
     background: #fff;
 	color:#C41A16;
-    line-height: 14px;
+    line-height: 18px;
     height: 20px;
+    vertical-align: top;
 	/*text-shadow: 0 0 0px #000;*/
 }
 .objval.str:before,.objval.str:after{
@@ -385,23 +423,8 @@ pre.result {
     position: relative;
     margin: 15px 0 8px 0;
 }
-
-/*.stringify {
-    position: absolute;
-    right: 1px;
-    top: 1px;
-    border: 1px solid #B7B7B7;
-    border-width: 0 0 1px 1px;
-    border-radius: 0 0 0 12px;
-    padding: 5px;
-    font-size: 12px;
-    background-color: #fff;
-    cursor: pointer;
-    z-index: 1;
-    box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.09);
-}*/
 .main-title {
-    margin-top: 12px;
+    position: relative;
 }
 .auth_info:after,.auth_info:before {
     content: "";
@@ -412,26 +435,6 @@ pre.result {
 .em {
     float: right;
 }
-/*.log{
-    position: absolute;
-    right: 1px;
-    bottom: 1px;
-    border: 1px solid #B7B7B7;
-    border-width: 1px 0 0 1px;
-    border-radius: 12px 0 0 0;
-    padding: 5px;
-    font-size: 12px;
-    background-color: #fff;
-    cursor: pointer;
-    z-index: 1;
-    box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.09);
-}
-.stringify:active{
-    box-shadow: -2px 2px 4px rgba(0, 0, 0, 0.21);
-}
-.log:active {
-    box-shadow: -2px -2px 4px rgba(0, 0, 0, 0.21);
-}*/
 .line {
     position: absolute;
     width: 0px;
@@ -471,4 +474,43 @@ pre.result {
 
 .cmd:active,.cmd:focus{
     background-color: #EEEEEE;
-};
+}
+.fb_like {
+    margin: 12px 0;
+}
+.objtxt:empty:before {content: "Key";color: #B3B3B3;}
+.objval.str:empty:before {content: "'String";color: #B3B3B3;}
+.objval.str:empty:after {content: "'";color: #B3B3B3;}
+.objval.num:empty:before {content: "Number";color: #B3B3B3;}
+.path {
+    position: absolute;
+    left: 100%;
+    height: 16px;
+    line-height: 15px;
+    font-size: 11px;
+    margin-left: 12px;
+    margin-top: 3px;
+    color: #979797;
+    text-shadow: 0px 1px 0px #FFF;
+    z-index: 1;
+    white-space: nowrap;
+}
+.json_block.iobj > .path,.json_block.iarr > .path {
+    left: 0;
+    top: 0;
+}
+.info {
+    color: #2A2A2A;
+    font-size: 15px;
+}
+.info .ref {
+    font-size: 11px;
+    font-style: italic;
+}
+textarea.result {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 2px;
+    margin-top: 8px;
+}
