--- a/jsonbuilder/css/style.css
+++ b/jsonbuilder/css/style.css
@@ -95,7 +95,7 @@ pre.result{background:#fff;padding:8px;border:1px solid #ddd;border-radius:2px;m
 .json_block.iobj > .path,.json_block.iarr > .path{left:0;top:0}
 .info{color:#2A2A2A;font-size:15px}
 .info .ref{font-size:11px;font-style:italic}
-textarea.result{width:100%;padding:8px;border:1px solid #ddd;border-radius:2px;margin-top:8px;resize:none}
+textarea.result{width:100%;padding:8px;border:1px solid #ddd;border-radius:2px;margin-top:8px;resize:none;overflow: hidden;}
 .new-json {position: absolute;top: 0;right: 0;margin: 8px;z-index: 1;}
 .new-json:before {content: "\f006";font-family: FontAwesome;margin-right: 4px;}
 .cmd-wrap {display: inline-block;vertical-align: top;}
