--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ keyframes process{0%{background-position:0 0}100%{background-position:-34px 0}}
 
 h1{font-size:1.5em}
 
-.json_init{font-size:11px;padding:2px;cursor:pointer;position:relative;display:inline-block;border:1px solid #B6B6B6;background-image:linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-webkit-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-moz-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-o-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-ms-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);background-image:-khtml-linear-gradient(59deg,#fff 25%,#E7E7E7 25%,#E7E7E7 50%,#fff 50%,#fff 75%,#E7E7E7 75%,#E7E7E7 100%,#fff 100%);border-radius:2px;background-size:100% 20px;color:#000;text-shadow:0px 1px 0px #fff;text-align:center;width:35px;vertical-align:top;transition:all 1s ease;-webkit-transition:all 1s ease;-moz-transition:all 1s ease;-o-transition:all 1s ease;-ms-transition:all 1s ease;animation:process 1s infinite linear}
+.json_init{font-size:11px;padding:2px;cursor:pointer;position:relative;display:inline-block;border:1px solid #B6B6B6;background-image:linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);background-image:-webkit-linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);background-image:-moz-linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);background-image:-o-linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);background-image:-ms-linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);background-image:-khtml-linear-gradient(59deg,#fff 25%,#d2d2d2 25%,#d2d2d2 50%,#fff 50%,#fff 75%,#d2d2d2 75%,#d2d2d2 100%,#fff 100%);border-radius:2px;background-size:100% 20px;color:#000;text-shadow:0px 1px 0px #fff;text-align:center;width:35px;vertical-align:top;transition:all 1s ease;-webkit-transition:all 1s ease;-moz-transition:all 1s ease;-o-transition:all 1s ease;-ms-transition:all 1s ease;animation:process 1s infinite linear}
 .json_init:focus:before{content:"";border:1px solid #4D90FE;position:absolute;left:-1px;top:-1px;width:33px;height:17px;border-radius:2px}
 
 .json_op{position:absolute;white-space:nowrap;top:-4px;font-size:12px;left:100%;margin-left:6px;display:none;background:#fff;border:1px solid #ddd;border-radius:2px}
@@ -61,7 +61,7 @@ h1{font-size:1.5em}
 .key_row.row_collapse>.val>.json_block.iarr>.path,
 .key_row.row_collapse>.val>.json_block.iobj>.path {margin-left: 30px}
 
-.key{float:left;position:relative}
+.key{float:left;position:relative;z-index:2}
 .key:after{content:":"}
 
 .val:after{content:","}
@@ -123,6 +123,8 @@ h1{font-size:1.5em}
 
 .parse_error {float: right;color: #FFFFFF;font-size: 14px;background: #b22;padding: 1px 4px;border-radius: 2px;}
 .parse_error:before {content: "\f071";font-family: FontAwesome;margin-right: 4px;}
+
+.error-line {position: absolute;left: -15px;top: -25px;background:-webkit-linear-gradient(#909090,#5a5a5a);border:1px solid #616161;color:#fff;font-size:12px;padding:0 6px;height:20px;line-height:18px;font-family:monospace;border-radius:2px;cursor:default}
 
 .tip{display: block;font-size: 12px;background: #808080;color: #fff;padding: 6px;border: 1px solid #616161;border-radius: 2px;margin-top: 6px}
 .tip > .t-point {display: inline-block;padding-left: 14px;margin: 3px 0;}
